Archive2/2c/d2aa028655e74d/output
main.cpp:1:1: error: expected unqualified-id
-- Srm632Div2Lev1 RunningAroundPark
^
1 error generated.
